<resources>
    <string name="app_name">Football</string>
    <string name="title_helloworld">Hello World!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="welcome_register">Silahkan Mendaftar</string>
    <string name="ic_login">Ikon Login</string>
    <string name="starting_point">0</string>
    <string name="str_add">Tambah</string>
    <string name="str_minus">Kurang</string>
    <string name="str_reset">Reset</string>
    <string name="ic_item_custom">Ikon List Custom</string>
    <string name="custom_list">Custom List</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="searching">Cari</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="information">Informasi</string>
    <string name="confirmation_delete">Apakah dihapus?.,</string>
    <string name="agree">ya</string>
    <string name="disagree">tidak</string>

    <string-array name="change_value">
        <item>Kelipatan 1</item>
        <item>Kelipatan 2</item>
        <item>Kelipatan 3</item>
    </string-array>
</resources>