<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAct">

    <TextView
        android:id="@+id/tv_reg_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/welcome_register"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/text_default"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_reg_welcome"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/ed_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_reg_username"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/ed_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_reg_email"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_reg_password"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/register"
        android:onClick="regEmployee"
        android:textColor="@android:color/white" />

</RelativeLayout>