<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_main_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shadows_into_light_two"
        android:gravity="center"
        android:text="@string/starting_point"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_main_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/str_add"
        android:textColor="@android:color/white"
        app:icon="@drawable/ic_baseline_add_24"
        android:onClick="adding"
        app:layout_constraintEnd_toStartOf="@+id/gl_main_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_value" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/str_minus"
        android:textColor="@android:color/white"
        app:icon="@drawable/ic_baseline_trending_flat_24"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="minus"
        app:layout_constraintStart_toStartOf="@+id/gl_main_middle"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_value" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/str_reset"
        android:textColor="@android:color/white"
        android:onClick="reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

</androidx.constraintlayout.widget.ConstraintLayout>